--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,8 +21,14 @@ jobs:
       with:
         go-version: '1.21'
 
-    - name: Build
-      run: go build -v ./...
+    - name: Build url-shortener-app
+      run: go build -o url-shortener-app ./url-shortener-app/cmd/url-shortener-app
 
-    - name: Test
-      run: go test -v ./...
+    - name: Test url-shortener-app
+      run: go test -v ./url-shortener-app/...
+
+    - name: Build auth-app
+      run: go build -o auth-app ./auth-app/cmd/auth-app
+
+    - name: Test auth-app
+      run: go test -v ./auth-app/...
