--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.21'
 
     - name: Build url-shortener-app
-      run: go build -v ./url-shortener-app/...
+      run: go build -v ./url-shortener-app/cmd/...
 
     - name: Test url-shortener-app
       run: go test -v ./url-shortener-app/...
