--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,8 @@ jobs:
         go-version: '1.21'
 
     - name: Build url-shortener-app
-      run: |
-        go build -o url-shortener-app ./url-shortener-app/cmd/url-shortener-app
-        cd ..
-
+      run: go build -v ./url-shortener-app/...
+      
     - name: Test url-shortener-app
       run: go test -v ./url-shortener-app/...
 
